--- a/src/Card.css
+++ b/src/Card.css
@@ -50,6 +50,10 @@
   font-size: 20px;
   will-change: transform;
   transform: translateZ(50px);
+  text-shadow: 
+    0 2px 2px rgba(0, 0, 0, 1),
+    0 4px 10px rgba(0, 0, 0, 1),
+    0 6px 20px rgba(0, 0, 0, 1);
 }
 
 .tilted-card-caption {
